Display images from the stream.
However the thread is currently dropped and only one image is sent. Need to fix the thread lifetime.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.0.1"
 authors = ["Mark Boss <markboss@mailbox.org>"]
 
 [dependencies]
-image = "*"
+image = "0.7"
 ocl = "0.14.1"
 find_folder = "0.3.0"
 time = "0.1"
+camera_capture = "0.3.0"
+piston_window = "0.40"
+piston-texture = "0.4"
