--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,16 @@ name = "ocl-canny-rs"
 version = "0.0.1"
 authors = ["Mark Boss <markboss@mailbox.org>"]
 
+[features]
+default = ["camera_support"]
+camera_support = []
+use_dummy_streamer = []
+
 [dependencies]
-image = "0.7"
+image = "0.14.0"
 ocl = "0.14.1"
 find_folder = "0.3.0"
 time = "0.1"
-camera_capture = "0.3.0"
-piston_window = "0.40"
-piston-texture = "0.4"
+camera_capture = { version = "0.3.0", optional = true }
+piston_window = "0.67.0"
+piston-texture = "0.5.0"
