--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Mark Boss <markboss@mailbox.org>"]
 
 [features]
 default = ["camera_support"]
-camera_support = []
+camera_support = ["camera_capture"]
 use_dummy_streamer = []
 
 [dependencies]
