--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,13 @@ find_folder = "0.3.0"
 time = "0.1"
 piston_window = "0.67.0"
 piston-texture = "0.5.0"
+piston2d-graphics = "0.21.1"
 fps_counter = "0.2.0"
 indextree = "1.0.1"
+
+[dependencies.conrod]
+version = "0.53.0"
+features = ["piston"]
 
 [dependencies.camera_capture]
 git = "https://github.com/vork/camera_capture"
