Continue with ellipse ransac. Huge OpenCL error currently
###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

<kernel>:17:22: error: variable length arrays are not supported in OpenCL
    __local int votes[num_iterations];
                     ^
<kernel>:18:29: error: variable length arrays are not supported in OpenCL
    __local int2 iter_center[num_iterations];
                            ^
<kernel>:19:30: error: variable length arrays are not supported in OpenCL
    __local float iter_radius[num_iterations];
                             ^
<kernel>:42:12: error: invalid operands to binary expression ('__attribute__((address_space(16776963))) float' and 'float')
        iA %= cons_size;
        ~~ ^  ~~~~~~~~~
<kernel>:43:12: error: invalid operands to binary expression ('__attribute__((address_space(16776963))) float' and 'float')
        iB %= cons_size;
        ~~ ^  ~~~~~~~~~
<kernel>:44:12: error: invalid operands to binary expression ('__attribute__((address_space(16776963))) float' and 'float')
        iC %= cons_size;
        ~~ ^  ~~~~~~~~~
<kernel>:47:32: error: array subscript is not an integer
                consensus_set_x[start_read + iA] - consensus_set_x[start_read + iB],
                               ^~~~~~~~~~~~~~~~
<kernel>:47:67: error: array subscript is not an integer
                consensus_set_x[start_read + iA] - consensus_set_x[start_read + iB],
                                                                  ^~~~~~~~~~~~~~~~
<kernel>:50:32: error: array subscript is not an integer
                consensus_set_x[start_read + iB] - consensus_set_x[start_read + iC],
                               ^~~~~~~~~~~~~~~~
<kernel>:50:67: error: array subscript is not an integer
                consensus_set_x[start_read + iB] - consensus_set_x[start_read + iC],
                                                                  ^~~~~~~~~~~~~~~~
<kernel>:53:32: error: array subscript is not an integer
                c

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ piston-texture = "0.5.0"
 piston2d-graphics = "0.21.1"
 fps_counter = "0.2.0"
 indextree = "1.0.1"
+rand = "0.3.15"
 
 [dependencies.conrod]
 version = "0.53.0"
