--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ piston2d-graphics = "0.21.1"
 fps_counter = "0.2.0"
 indextree = "1.0.1"
 rand = "0.3.15"
+ordered-float = "0.5.0"
 
 [dependencies.conrod]
 version = "0.53.0"
