Add missing dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ image = "0.14.0"
 ocl = "0.14.1"
 find_folder = "0.3.0"
 time = "0.1"
+piston = "0.32.0"
 piston_window = "0.67.0"
 piston-texture = "0.5.0"
 piston2d-graphics = "0.21.1"
